refactor(racingcar): README.md 기능 목록 정리, 상수 처리, 코드 정리